添加bar，失败，到了navigator继续

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -54,6 +54,8 @@ target 'imoocApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNNativeIOS', :path => '../node_modules/native-ios'
+
   target 'imoocAppTests' do
     inherit! :complete
     # Pods for testing
