--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-ios": "git+https://github.com/modavi/NativeIOS.git#master",
     "react": "16.11.0",
     "react-native": "0.62.0",
     "react-native-vector-icons": "^6.6.0"
